--- a/OswaldoFlix/index.html
+++ b/OswaldoFlix/index.html
@@ -23,24 +23,22 @@
 
             <nav>
                 <ul class="cabecalho__menu">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Séries</a></li>
-                    <li><a href="#">Filmes</a></li>
-                    <li><a href="#">Bombando</a></li>
-                    <li><a href="#">Minha Lista</a></li>
-                    <li><a href="#">Assita de novo</a></li>
+                    <li><a href="pagAtualização.html">Inicio</a></li>
+                    <li><a href="pagAtualização.html">Séries</a></li>
+                    <li><a href="pagAtualização.html">Filmes</a></li>
+                    <li><a href="pagAtualização.html">Bombando</a></li>
+                    <li><a href="pagAtualização.html">Minha Lista</a></li>
+                    <li><a href="pagAtualização.html">Assita de novo</a></li>
             </nav>
             </ul>
 
             <div class="cabecalho__menuConfiguracao">
                 <ul>
-                    <li><a href="#"><img src="assets/img/pesquisa.png" alt="pesquisa"></a></li>
-                    <li><a href="#">INFANTIL</a></li>
-                    <li><a href="#"><img src="assets/img/presente.png" alt="presente"></a></li>
-                    <li><a href="#"><img src="assets/img/notificacao.png" alt="notificacao"></a></li>
-                    <li><a href="#"><img src="assets/img/ProfileIMG.png" alt="Perfil"></a></li>
-                    <li><a href="#"><img src="assets/img/proximo.png" alt="Proximo usuario"></a></li>
-
+                    <li><a href="pagAtualização.html"><img src="assets/img/pesquisa.png" alt="pesquisa"></a></li>
+                    <li><a href="pagAtualização.html">INFANTIL</a></li>
+                    <li><a href="pagAtualização.html"><img src="assets/img/presente.png" alt="presente"></a></li>
+                    <li><a href="pagAtualização.html"><img src="assets/img/notificacao.png" alt="notificacao"></a></li>
+                    <li><a href="pagAtualização.html"><img src="assets/img/ProfileIMG.png" alt="Perfil"></a></li>
                 </ul>
             </div>
         </div>
@@ -60,8 +58,8 @@
             </article>
 
             <div class="secaoDestaque__navegacaoDestaque">
-                <a href="#"><img src="assets/img/assistir.png" alt="Icone de assistir">Assistir</a>
-                <a href="#"><img src="assets/img/info.png" alt="botão de informação">Informações</a>
+                <a href="pagAtualização.html"><img src="assets/img/assistir.png" alt="Icone de assistir">Assistir</a>
+                <a href="pagAtualização.html"><img src="assets/img/info.png" alt="botão de informação">Informações</a>
             </div>
         </section>
 
