--- a/OswaldoFlix/index.html
+++ b/OswaldoFlix/index.html
@@ -8,7 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Koulen&family=Roboto+Flex:opsz,wght@8..144,200&family=Roboto:wght@100;300;400&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!--css-->
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <!--icone-->
     <title>Oswaldo-Flix</title>
 </head>
 
@@ -28,7 +39,7 @@
                     <li><a href="pagAtualização.html">Filmes</a></li>
                     <li><a href="pagAtualização.html">Bombando</a></li>
                     <li><a href="pagAtualização.html">Minha Lista</a></li>
-                    <li><a href="pagAtualização.html">Assita de novo</a></li>
+                    <li><a href="pagAtualização.html">Assista de novo</a></li>
             </nav>
             </ul>
 
@@ -58,13 +69,15 @@
             </article>
 
             <div class="secaoDestaque__navegacaoDestaque">
-                <a href="pagAtualização.html"><img src="assets/img/assistir.png" alt="Icone de assistir">Assistir</a>
-                <a href="pagAtualização.html"><img src="assets/img/info.png" alt="botão de informação">Informações</a>
+                <a href="pagAtualização.html"><img src="assets/img/assistir.png"
+                        alt="Icone de assistir"><strong>Assistir</strong></a>
+                <a href="pagAtualização.html"><img src="assets/img/info.png"
+                        alt="botão de informação">Mais informações</a>
             </div>
         </section>
 
         <section class="secaoFilme">
-            <h2>EM ALTA</h2>
+            <h2><strong>EM ALTA</strong></h2>
 
             <div class="secaoFilmes__listaFilmes">
                 <ul>
@@ -109,7 +122,7 @@
         </section>
 
         <section class="secaoFilme">
-            <h2>CONTINUAR ASSISTINDO</h2>
+            <h2><strong>CONTINUAR ASSISTINDO</strong></h2>
 
             <section class="secaoFilmes__listaFilmes">
                 <ul>
