--- a/OswaldoFlix/pagAtualização.html
+++ b/OswaldoFlix/pagAtualização.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style02.css">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <title>Oswaldo-Flix</title>
 </head>
+
 <body>
     <header class="secaoTitulo">
-    <h1>ESTE SITE AINDA ESTÁ EM DESENVOLVIMENTO.</h1>
+        <h1>ESTE SITE AINDA ESTÁ EM DESENVOLVIMENTO.</h1>
     </header>
     <main class="secaoERROR">
-    <p>o site ainda está em desenvolvimento, aguarde as futuras atualizações do projeto.</p>
+        <p>O site ainda está em desenvolvimento, aguarde as futuras atualizações do projeto.</p>
         <figure>
             <img src="assets/img/error404.png" alt="error404">
             <figcaption>ERROR 404</figcaption>
@@ -25,4 +28,5 @@
         <a href="index.html"><img src="assets/img/voltar.png" alt="voltar"></a>
     </footer>
 </body>
+
 </html>
