--- a/OswaldoFlix/index.html
+++ b/OswaldoFlix/index.html
@@ -70,7 +70,7 @@
 
             <div class="secaoDestaque__navegacaoDestaque">
                 <a href="pagAtualização.html"><img src="assets/img/assistir.png"
-                        alt="Icone de assistir"><strong>Assistir</strong></a>
+                        alt="Icone de assistir">Assistir</a>
                 <a href="pagAtualização.html"><img src="assets/img/info.png"
                         alt="botão de informação">Mais informações</a>
             </div>
@@ -243,6 +243,9 @@
             <p class="rodape__codigoReferencia">© 1997-2021 Netflix, Inc. {i-062d573a0ee099242}</p>
         </section>
     </footer>
+    <script>
+        
+    </script>
 </body>
 
 </html>
